fix some coding quality issues